Colab을 통해 생성됨

--- a/Q_example/day5_ex2_파일명정렬.ipynb
+++ b/Q_example/day5_ex2_파일명정렬.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMCLRiLQ013vrjl8eDpObOn",
+      "authorship_tag": "ABX9TyN3/3+P8VOaise/uieZhYCV",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -144,12 +144,12 @@
         "# --> 일반 문자열이 아니라 정규식으로 작성된 문자열\n"
       ],
       "metadata": {
-        "id": "hhjej2cfXaMx",
-        "outputId": "dc808edf-7c52-4d7e-8dab-1a0f239b3ae9",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
-        }
+        },
+        "id": "hhjej2cfXaMx",
+        "outputId": "dc808edf-7c52-4d7e-8dab-1a0f239b3ae9"
       },
       "execution_count": 18,
       "outputs": [
@@ -189,12 +189,12 @@
         "\\d"
       ],
       "metadata": {
-        "id": "Sou_-eAwdZSM",
-        "outputId": "c8aa5165-1b21-47b3-8a9d-ff391a94d09e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 110
-        }
+        },
+        "id": "Sou_-eAwdZSM",
+        "outputId": "c8aa5165-1b21-47b3-8a9d-ff391a94d09e"
       },
       "execution_count": 20,
       "outputs": [
@@ -218,11 +218,11 @@
         "re.findall( r\"\\d\",temp)"
       ],
       "metadata": {
-        "id": "ggpgejbmdgxb",
-        "outputId": "dc6e6daa-31a1-49bc-b10a-f68c73724a36",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "ggpgejbmdgxb",
+        "outputId": "dc6e6daa-31a1-49bc-b10a-f68c73724a36"
       },
       "execution_count": 21,
       "outputs": [
@@ -245,11 +245,11 @@
         "re.findall(r\"\\d+\",temp)"
       ],
       "metadata": {
-        "id": "wYwhB4VGef3G",
-        "outputId": "491b6d90-d972-4144-d47a-8ddb3a2b1a01",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "wYwhB4VGef3G",
+        "outputId": "491b6d90-d972-4144-d47a-8ddb3a2b1a01"
       },
       "execution_count": 22,
       "outputs": [
@@ -271,11 +271,11 @@
         "re.findall(r\"\\d*\",temp) #공백문자열이 나옴 ==> 원하는 패턴이 찾아지는지 테스트 필요"
       ],
       "metadata": {
-        "id": "-zAORb7Ke3HZ",
-        "outputId": "853f7a0a-baa5-4cdd-8457-8889d04fa9de",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "-zAORb7Ke3HZ",
+        "outputId": "853f7a0a-baa5-4cdd-8457-8889d04fa9de"
       },
       "execution_count": 23,
       "outputs": [
@@ -327,11 +327,11 @@
         "re.findall(r\"[0123456789]+\",temp)"
       ],
       "metadata": {
-        "id": "EKS0MooFe_Qx",
-        "outputId": "760d5c63-ebab-4032-fd59-d6e784e86cd6",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "EKS0MooFe_Qx",
+        "outputId": "760d5c63-ebab-4032-fd59-d6e784e86cd6"
       },
       "execution_count": 24,
       "outputs": [
@@ -353,11 +353,11 @@
         "re.findall(r\"[0-9]+\",temp)"
       ],
       "metadata": {
-        "id": "YikshVkqfURo",
-        "outputId": "0cddaabf-8f8d-440a-f913-b7c3cd720eac",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "YikshVkqfURo",
+        "outputId": "0cddaabf-8f8d-440a-f913-b7c3cd720eac"
       },
       "execution_count": 25,
       "outputs": [
@@ -379,11 +379,11 @@
         "re.findall( r\"[3-4]+\",temp)"
       ],
       "metadata": {
-        "id": "UvK7C-fuffOZ",
-        "outputId": "05fbe689-6c2a-4088-a01b-ed15c94b55d6",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "UvK7C-fuffOZ",
+        "outputId": "05fbe689-6c2a-4088-a01b-ed15c94b55d6"
       },
       "execution_count": 26,
       "outputs": [
@@ -405,11 +405,11 @@
         "re.findall(r\"[a-z]+\",temp) # 소문자 1개 이상 연속된 패턴!!"
       ],
       "metadata": {
-        "id": "wl2Z5cVqfkcY",
-        "outputId": "bd6b8d3d-b3b3-4d1b-99d6-ff2193583260",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "wl2Z5cVqfkcY",
+        "outputId": "bd6b8d3d-b3b3-4d1b-99d6-ff2193583260"
       },
       "execution_count": 28,
       "outputs": [
@@ -431,11 +431,11 @@
         "re.findall( r\"[A-Z]+\", temp) # 대문자 1개 이상 연속된 패턴"
       ],
       "metadata": {
-        "id": "JtKuuicufvlN",
-        "outputId": "a250d844-7870-4be8-c19c-40406bef269d",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "JtKuuicufvlN",
+        "outputId": "a250d844-7870-4be8-c19c-40406bef269d"
       },
       "execution_count": 29,
       "outputs": [
@@ -459,11 +459,11 @@
         "re.findall( r\"[a-zA-A]+\", temp)"
       ],
       "metadata": {
-        "id": "RH5i0F6gf7Mm",
-        "outputId": "9bf3fc4f-083f-45ea-97bc-88209cd4bd35",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "RH5i0F6gf7Mm",
+        "outputId": "9bf3fc4f-083f-45ea-97bc-88209cd4bd35"
       },
       "execution_count": 31,
       "outputs": [
@@ -500,11 +500,11 @@
         "re.findall(r\"\\d+\", temp)"
       ],
       "metadata": {
-        "id": "XsRFlH80gztf",
-        "outputId": "6e0de1e0-f4c4-41c9-b258-207875605900",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "XsRFlH80gztf",
+        "outputId": "6e0de1e0-f4c4-41c9-b258-207875605900"
       },
       "execution_count": 34,
       "outputs": [
@@ -526,12 +526,12 @@
         "re.findall(r\"\\d+\", temp)[0] #-> number 파트 추출 가능"
       ],
       "metadata": {
-        "id": "7EMXvOkLhJwP",
-        "outputId": "a48b83ed-6fed-448b-c835-2955a679c0d1",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
-        }
+        },
+        "id": "7EMXvOkLhJwP",
+        "outputId": "a48b83ed-6fed-448b-c835-2955a679c0d1"
       },
       "execution_count": 37,
       "outputs": [
@@ -556,11 +556,11 @@
         "[1,3,3,3,2,4,5,6].index(4)"
       ],
       "metadata": {
-        "id": "8PDxaGLOhR4N",
-        "outputId": "b1b1a842-fe24-4dce-e007-062133bba2ca",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "8PDxaGLOhR4N",
+        "outputId": "b1b1a842-fe24-4dce-e007-062133bba2ca"
       },
       "execution_count": 38,
       "outputs": [
@@ -582,11 +582,11 @@
         "temp.index('d')"
       ],
       "metadata": {
-        "id": "76qxrrNkhiX3",
-        "outputId": "b1346678-755a-4f4d-a37c-dd8c5b26a238",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "76qxrrNkhiX3",
+        "outputId": "b1346678-755a-4f4d-a37c-dd8c5b26a238"
       },
       "execution_count": 39,
       "outputs": [
@@ -608,11 +608,11 @@
         "temp.index(re.findall(r\"\\d+\", temp)[0])"
       ],
       "metadata": {
-        "id": "AqepLEJMhqVE",
-        "outputId": "7423c470-92bb-489c-ebe7-9868a9eb1538",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "AqepLEJMhqVE",
+        "outputId": "7423c470-92bb-489c-ebe7-9868a9eb1538"
       },
       "execution_count": 41,
       "outputs": [
@@ -634,12 +634,12 @@
         "temp[:temp.index(re.findall(r\"\\d+\", temp)[0] )]"
       ],
       "metadata": {
-        "id": "NA-y5mskh1sL",
-        "outputId": "14bce533-bf0c-4625-f92f-5a40eaff222a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
-        }
+        },
+        "id": "NA-y5mskh1sL",
+        "outputId": "14bce533-bf0c-4625-f92f-5a40eaff222a"
       },
       "execution_count": 44,
       "outputs": [
@@ -666,12 +666,12 @@
         "\"AAASfdsfgDDD\""
       ],
       "metadata": {
-        "id": "K2LgXf2PiF57",
-        "outputId": "34db9b1d-e7f4-42bd-b74c-4a90693eff4e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
-        }
+        },
+        "id": "K2LgXf2PiF57",
+        "outputId": "34db9b1d-e7f4-42bd-b74c-4a90693eff4e"
       },
       "execution_count": 45,
       "outputs": [
@@ -712,11 +712,11 @@
         "solution([\"img12.png\", \"img10.png\", \"img02.png\", \"img1.png\", \"IMG01.GIF\", \"img2.JPG\"])"
       ],
       "metadata": {
-        "id": "WAjQVtGli_WA",
-        "outputId": "3d633a50-6ba3-42ed-df76-f7c474ceb6c9",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "WAjQVtGli_WA",
+        "outputId": "3d633a50-6ba3-42ed-df76-f7c474ceb6c9"
       },
       "execution_count": 74,
       "outputs": [
@@ -752,6 +752,15 @@
           "execution_count": 74
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "코드 위치 : https://school.programmers.co.kr/learn/courses/30/lessons/17686?language=python3"
+      ],
+      "metadata": {
+        "id": "u_ZiFOVVqMw6"
+      }
     },
     {
       "cell_type": "code",
