Colab을 통해 생성됨

--- a/Q_example/day5_ex2_파일명정렬.ipynb
+++ b/Q_example/day5_ex2_파일명정렬.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN3/3+P8VOaise/uieZhYCV",
+      "authorship_tag": "ABX9TyPZxFtctRJ0RaMj48JvSNnU",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -764,9 +764,77 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "## 강사님 solution - Dict를 활용한... ##\n",
+        "# Try2) dict\n",
+        "# ==> my_files ={}\n",
+        "#     k : 중복이 없는 원본 파일명 -> 문제에서 중복 없는 조건\n",
+        "#     v : 정렬에 필요한 정보(head, number, org_inx)\n",
+        "# ==> 정렬의 기준? --> 오로지 value에 존재\n",
+        "#     my_files.items(), my_files.values()....사용\n",
+        "import re\n",
+        "def solution(files):\n",
+        "  answer=[]\n",
+        "  #세팅\n",
+        "  my_files = {} # k:파일명, v : (h,n,idx)\n",
+        "  for idx, s in enumerate(files):\n",
+        "    p = re.findall(r\"\\d+\",s)[0]\n",
+        "    head = s[:s.index(p)].lower()\n",
+        "    number = int(p)\n",
+        "    my_files[s] = (head,number,idx)\n",
+        "  file_list = my_files.items()\n",
+        "  file_list = sorted(file_list, key = lambda x:(x[1][0],x[1][1],x[1],[2]))\n",
+        "  answer = [i[0] for i in file_list]\n",
+        "  return answer\n",
+        "solution([\"img12.png\", \"img10.png\", \"img02.png\", \"img1.png\", \"IMG01.GIF\", \"img2.JPG\"])"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Njj1MLaVkaE5",
+        "outputId": "7cb389e6-ac9b-4ab7-9c66-6e691441a215"
+      },
+      "execution_count": 86,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['img1.png', 'IMG01.GIF', 'img02.png', 'img2.JPG', 'img10.png', 'img12.png']"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 86
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "Njj1MLaVkaE5"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "vahdtsptrC02",
+        "outputId": "1f4b94da-d77c-435c-8fa1-bbb3e987f0e2"
+      },
+      "execution_count": 85,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "36\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "XybAEj6SrFIV"
       },
       "execution_count": null,
       "outputs": []
